# epub_to_audiobook

./: .gitignore  README.md  ZerotoOne.epub  main.py  pyproject.toml  pytest.ini
ZerotoOne/: 0001_Copyright_2014_by_Peter_Thiel_All_rights_reservedPub.txt  0002_Contents_Preface_Zero_to_One_1_The_Challenge_of.txt  0003_Preface_ZERO_TO_ONE_EVERY_MOMENT_IN_BUSINESS_happe.txt  0004_THE_CHALLENGE_OF_THE_FUTURE_WHENEVER_I_INTERVIEW_someon.txt  0005_ZERO_TO_ONE_THE_FUTURE_OF_PROGRESS_When_we_think_about.txt  0006_STARTUP_THINKING_New_technology_tends_to_come_from_new.txt  0007_PARTY_LIKE_ITS_1999_OUR_CONTRARIAN_QUESTIONWhat_impor.txt  0008_A_QUICK_HISTORY_OF_THE_90S_The_1990s_have_a_good_image.txt  0009_MANIA_SEPTEMBER_1998MARCH_2000_Dotcom_mania_was_inte.txt  0010_PAYPAL_MANIA_When_I_was_running_PayPal_in_late_1999_I.txt  0011_LESSONS_LEARNED_Cause_they_say_2000_zero_zero_party_o.txt  0012_ALL_HAPPY_COMPANIES_ARE_DIFFERENT_THE_BUSINESS_VERSION.txt  0013_LIES_PEOPLE_TELL_How_much_of_the_world_is_actually_mono.txt  0014_RUTHLESS_PEOPLE_The_problem_with_a_competitive_business.txt  0015_MONOPOLY_CAPITALISM_So_a_monopoly_is_good_for_everyone.txt  0016_THE_IDEOLOGY_OF_COMPETITION_CREATIVE_MONOPOLY_means_new.txt  0017_WAR_AND_PEACE_Professors_downplay_the_cutthroat_culture.txt  0018_LAST_MOVER_ADVANTAGE_ESCAPING_COMPETITION_will_give_you.txt  0019_CHARACTERISTICS_OF_MONOPOLY_What_does_a_company_with_la.txt  0020_BUILDING_A_MONOPOLY_Brand_scale_network_effects_and.txt  0021_THE_LAST_WILL_BE_FIRST_Youve_probably_heard_about_fir.txt  (+59 more)
confirm/: 0001_Table_of_Contents.txt  (+3 more)
(+10 files in other folders)
