[project]
name = "epub-to-audiobook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "docker==7.1.0",
    "ebooklib==0.19",
    "edge-tts==7.0.2",
    "gradio==5.33.1",
    "gradio-log==0.0.8",
    "mutagen==1.47.0",
    "openai==1.85.0",
    "pydub==0.25.1",
    "requests==2.32.4",
    "sentencex==0.6.1",
    "wyoming==1.6.0",
]
